# country-infographic-generator

./: .gitignore  Cargo.toml  README.md  run.ps1
.github/: copilot-instructions.md
datasets/: conflicts_feb2026.json  low_elevation.json  murder_rate.json  political_systems.json
processed_data/: world.json
src/: main.rs
