[package]
name = "country-infographic-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.14"
anyhow = "1.0"
resvg = "0.42"
tiny-skia = "0.11"
clap = { version = "4", features = ["derive"] }
base64 = "0.22.1"
png = "0.17"
